[add & fix] Add pages, menu items, button animations, and fix overlapping bugs

--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -24,4 +24,16 @@
   .menu-button::after {
     @apply -bottom-[10px] md:-bottom-3 lg:group-hover:bottom-0 lg:group-hover:-rotate-45;
   }
+
+  .header-link-open {
+    transition:
+      transform 0.7s 0s,
+      opacity 0.7s 1s;
+  }
+
+  .header-link-closed {
+    transition:
+      transform 0.7s 0s,
+      opacity 0.7s 0s;
+  }
 }
